with footer, 2nd buttoncollaps needs fixing

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ header {
     background-color: rgb(21,27,67,0.5);
 }
 
+
 nav{
     background-color: rgb(21,27,67,0.5);   
 } /* custom Navigation END*/
@@ -73,16 +74,50 @@ nav{
     color: #fff;
 }
 
-.container-white button{
+/* button collaps*/
+.container-white .buttonCollapse{
     background: #02B6A6;
     }
     .about_more{
         color: white;
     }
     .about_less{
+        color:#ff7300;
+    }
+
+/* button collaps*/
+.container-blue .buttonCollapse{
+    background: #02B6A6;
+    }
+    .about_more{
         color: white;
     }
+    .about_less{
+        color:#ff7300;
+    }
+
+
+/* button collaps*/
+
+
+.social:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
 }
+.social {
+    -webkit-transform: scale(0.8);
+    /* Browser Variations: */
+    
+    -moz-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    -webkit-transition-duration: 0.5s;
+    -moz-transition-duration: 0.5s;
+    -o-transition-duration: 0.5s;
+}
+
+
+
 
 @media (min-width: 400px) { 
     .header_pic{
